# client_sim

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
app/: CMakeLists.txt  ImageViewer.cpp  ImageViewer.h  MainWindow.cpp  MainWindow.h  RgbaToPixmap.cpp  RgbaToPixmap.h  WzTreeModel.cpp  WzTreeModel.h  WzTreeView.cpp  WzTreeView.h  main.cpp
docs/: 00-architecture.md  01-wzlib-design.md  04-implementation-plan.md  M1_report.md  MapleNecrocer-master-analysis.md
docs/superpowers/plans/: 2026-06-08-m1-finish.md
docs/superpowers/specs/: 2026-06-08-m1-finish-design.md
tests/: CMakeLists.txt
tests/fixtures/wz/: README.md
tests/test_wz_binary_reader/: CMakeLists.txt  main.cpp
tests/test_wz_crypto/: CMakeLists.txt  main.cpp
tests/test_wz_node/: CMakeLists.txt  main.cpp
tests/test_wz_png_decoder/: CMakeLists.txt  main.cpp
tests/test_wz_structure/: CMakeLists.txt  main.cpp
tests/wztest/: CMakeLists.txt  wztest.h
tools/: CMakeLists.txt
tools/wzdump/: CMakeLists.txt  main.cpp
wzlib/: CMakeLists.txt
wzlib/include/wzlib/: Calculator.h  ErrorCode.h  Log.h  MsFile.h  Platform.h  PngDecoder.h  StringLinker.h  StringResult.h  WzBinaryReader.h  WzCrypto.h  WzDirectory.h  WzDouble.h  WzFile.h  WzHeader.h  WzImage.h  WzInt.h  WzNode.h  WzObject.h  WzPng.h  WzSound.h  WzString.h  WzStructure.h  WzUol.h  WzVector.h
wzlib/src/: Calculator.cpp  ErrorCode.cpp  Log.cpp  MsFile.cpp  Platform.cpp  PngDecoder.cpp  StringLinker.cpp  StringResult.cpp  WzBinaryReader.cpp  WzCrypto.cpp  WzDirectory.cpp  WzDouble.cpp  WzFile.cpp  WzHeader.cpp  WzImage.cpp  WzInt.cpp  WzNode.cpp  WzObject.cpp  WzPng.cpp  WzSound.cpp  WzString.cpp  WzStructure.cpp  WzUol.cpp  WzVector.cpp
